# app_classify_extract_claim

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  __init__.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  run.py
.github/workflows/: ci.yml
api/: __init__.py  main.py  middleware.py
api/routes/: health.py  process_email.py
config/: settings.py
data/: exceptions_queue.jsonl  lodged_claims.jsonl  mock_policies.json  vulnera_phrases.csv
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
docs/: index.md
docs/business/: claim_journey.md  index.md  outcomes.md  policies.md  vulnerability.md  what_it_does.md
docs/developer/: config.md  index.md  schemas.md  testing.md
docs/developer/architecture/: data_flow.md  decisions.md  hld.md  lld.md
docs/developer/nodes/: check_fields.md  classify.md  classify_email.md  enrich.md  exception_handler.md  extract_data.md  index.md  lodge.md  policy_retrieval.md  verify.md  vulnerability_check.md
docs/developer/services/: llm_client.md  vulnerability_scanner.md
graph/: builder.py  state.py
graph/nodes/: check_fields.py  classify.py  classify_email.py  enrich.py  exception_handler.py  extract_data.py  lodge.py  policy_retrieval.py  verify.py  vulnerability_check.py
prompts/: classify_prompts.py  extraction_prompts.py  vulnerability_prompts.py
schemas/: claim_data.py  policy.py
services/: file_parser.py  kafka_consumer.py  kafka_producer.py  llm_client.py  vulnerability_scanner.py
tests/: conftest.py
tests/sample_data/: README.md  existing_claim_update.eml  mock_llm_responses_existing_claim.json  mock_llm_responses_motor.json  mock_llm_responses_motor_txt.json  mock_llm_responses_non_motor.json  mock_llm_responses_non_motor_txt.json  mock_llm_responses_vulnerable.json  mock_llm_responses_webform_eml.json  mock_llm_responses_webform_txt.json  motor_new_claim.eml  motor_new_claim.txt  non_motor_new_claim.eml  non_motor_new_claim.txt  vulnerable_customer.eml  webform_submission.eml  webform_submission.txt
tests/test_api/: conftest.py  test_health.py  test_process_email.py
tests/test_graph/: test_fixture_emails.py  test_full_pipeline.py
tests/test_nodes/: test_check_fields.py  test_classify.py  test_classify_email.py  test_enrich.py  test_exception_handler.py  test_extract_data.py  test_lodge.py  test_policy_retrieval.py  test_verify.py  test_vulnerability_check.py
ui/: streamlit_app.py
